# PropBot

mission_command_centre/mapviz_plugins/src/: plan_mission_plugin.cc
mission_command_centre/propbot_mission_gui/config/: mapviz_config.yaml
mission_command_centre/propbot_mission_gui/launch/: mapviz.launch
mission_command_centre/propbot_mission_gui/perspective/: default_pers.perspective
simulation/propbot_gazebo/launch/: propbot_straight_path_w_obstacle.launch  propbot_ubc_student_union.launch  ubc_student_union.launch
simulation/propbot_gazebo/worlds/: clearpath_w_obstacle.world  empty_w_obj.world  ubc_student_union.world  ubc_student_union_stuck.world  w2.world
simulation/propbot_integrated_simulation/: CMakeLists.txt  package.xml
simulation/propbot_integrated_simulation/launch/: publish_wheel_speeds.launch
simulation/propbot_integrated_simulation/src/: publish_wheel_speeds.cc
simulation/propbot_simulation/launch/: straight_path_w_obstacle.launch  ubc_student_union_sim.launch
vehicle_autonomy/propbot_autonomy/launch/: autonomy.launch
vehicle_autonomy/propbot_control/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_control/config/: twist_mux.yaml
vehicle_autonomy/propbot_control/include/: propbot_hw_interface.h
vehicle_autonomy/propbot_control/launch/: control.launch
vehicle_autonomy/propbot_control/src/: propbot_base.cpp  skid_steer_adjust.cc
vehicle_autonomy/propbot_description/urdf/: decorations.xacro  propbot.urdf  propbot.urdf.xacro
vehicle_autonomy/propbot_drivers/launch/: camera.launch  ublox_gps.launch
vehicle_autonomy/propbot_interface/: CMakeLists.txt  package.xml  setup.py
vehicle_autonomy/propbot_interface/launch/: execute_demo.launch
vehicle_autonomy/propbot_interface/src/: wheel_speed_publisher.py
vehicle_autonomy/propbot_mission/: CMakeLists.txt  package.xml
vehicle_autonomy/propbot_mission/src/: mission_handler.cc
vehicle_autonomy/propbot_navigation/config/: planner.yaml  sbpl_global.yaml
vehicle_autonomy/propbot_navigation/launch/: move_base.launch
vehicle_autonomy/propbot_slam/launch/: rtabmap.launch  slam.launch
vehicle_interface/demo/: autonomy_interface.cpp  autonomy_interface.h  demo.ino
(+3 files in other folders)
